delete unusual function

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 30 23:32:20 PST 2023
-sdk.dir=C\:\\Users\\YIXING SHEN\\AppData\\Local\\Android\\Sdk
+#Tue Dec 05 21:04:09 PST 2023
+sdk.dir=/Users/yixingshen/Library/Android/sdk
